cli/tests/snapshots/integration__run_images@triangle_sss1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="80.0" height="30.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 80.0 0.0 L 52.5 29.047375 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
