cli/tests/snapshots/integration__run_images@triangle_sss2.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="80.0" height="30.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.5 0.5 L 80.5 0.5 L 52.5 29.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
</svg>
