cli/tests/snapshots/integration__run_images@underlay_align_offset3.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="170.0" height="170.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <g>
          <path d="M 0.0 84.852814 L 84.852814 0.0 L 169.705627 84.852814 L 84.852814 169.705627 Z" fill="rgba(0, 0, 128, 1.0)" />
          <path d="M 51.133371 16.0 L 86.266742 56.546071 L 41.133371 85.551528 L 18.846297 36.749643 L 70.32323 21.634651 L 77.958442 74.738711 L 24.3083 74.738711 L 31.943511 21.634651 L 83.420445 36.749643 L 61.133371 85.551528 L 16.0 56.546071 Z" fill="rgba(100, 149, 237, 1.0)" />
        </g>
        <path d="M 118.572257 16.0 L 153.705627 56.546071 L 108.572257 85.551528 L 86.285182 36.749643 L 137.762116 21.634651 L 145.397327 74.738711 L 91.747186 74.738711 L 99.382397 21.634651 L 150.859331 36.749643 L 128.572257 85.551528 L 83.438886 56.546071 Z" fill="rgba(100, 149, 237, 1.0)" />
      </g>
      <path d="M 51.133371 84.1541 L 86.266742 124.700171 L 41.133371 153.705627 L 18.846297 104.903742 L 70.32323 89.788751 L 77.958442 142.892811 L 24.3083 142.892811 L 31.943511 89.788751 L 83.420445 104.903742 L 61.133371 153.705627 L 16.0 124.700171 Z" fill="rgba(100, 149, 237, 1.0)" />
    </g>
    <path d="M 118.572257 84.1541 L 153.705627 124.700171 L 108.572257 153.705627 L 86.285182 104.903742 L 137.762116 89.788751 L 145.397327 142.892811 L 91.747186 142.892811 L 99.382397 89.788751 L 150.859331 104.903742 L 128.572257 153.705627 L 83.438886 124.700171 Z" fill="rgba(100, 149, 237, 1.0)" />
  </g>
</svg>
